<resources>
    <string name="app_name">ElderlyUI</string>
    <string name="battery">Battery</string>
    <string name="time">Time</string>
    <string name="pills">Χάπια</string>
    <string name="list">Τεφτέρι</string>
    <string name="jokes">Ανέκδοτα</string>
    <string name="danger">Κινδυνεύω</string>
    <string name="positions">Που Είμαι;</string>
    <string name="call">Κλήση</string>
    <string name="widgetText">The place , Temperature and Time</string>
    <string name="filler">Filler</string>
    <string name="help_button">ΚΑΛΕΣΕ\nΒΟΗΘΕΙΑ</string>
    <string name="taxi_text">\tΚΑΛΕΣΕ\n \t\t\t ΤΑΞΙ</string>
    <string name="exit_text">\t\t\tΕΞΟΔΟΣ \n ΕΦΑΡΜΟΓΗΣ</string>
    <string name="dangerText">ΠΑΤΗΣΤΕ ΤΟ ΚΟΚΚΙΝΟ ΚΟΥΜΠΙ ΓΙΑ ΝΑ ΕΝΗΜΕΡΩΘΟΥΝ ΟΙ ΦΥΛΑΚΕΣ ΣΑΣ!</string>
    <string name="dangerButton">ΚΙΝΔΥΝΕΥΩ</string>
    <string name="dangerMessage">ΝΑ ΓΙΝΕΙ ΚΛΗΣΗ ΑΣΤΥΝΟΜΙΑΣ ΚΑΙ ΚΗΔΕΜΟΝΩΝ;</string>
</resources>