<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/uiBackground"
    tools:context=".MainActivity">


    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/mainToolBar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/weatherBackground"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/batteryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/noto_sans_bold"
        android:text="@string/battery"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/timeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/noto_sans_bold"
        android:text="@string/time"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/pillsApp"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button"
        android:clickable="false"
        android:cropToPadding="true"
        android:fadingEdge="none"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:srcCompat="@drawable/pills" />

    <TextView
        android:id="@+id/textPills"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/noto_sans_bold"
        android:text="@string/pills"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="@+id/textPosition"
        app:layout_constraintEnd_toEndOf="@+id/pillsApp"
        app:layout_constraintStart_toStartOf="@+id/pillsApp"
        app:layout_constraintTop_toTopOf="@+id/textPosition" />


    <ImageButton
        android:id="@+id/callApp"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:background="@drawable/rounded_button"
        android:cropToPadding="true"
        android:fadingEdge="none"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/textCall"
        app:layout_constraintEnd_toStartOf="@+id/jokesApp"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/call" />

    <TextView
        android:id="@+id/textCall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/noto_sans_bold"
        android:text="@string/call"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="@+id/callApp"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="@+id/callApp" />

    <ImageButton
        android:id="@+id/jokesApp"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/rounded_button"
        android:cropToPadding="true"
        android:fadingEdge="none"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/textJokes"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/jokes" />

    <TextView
        android:id="@+id/textJokes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/noto_sans_bold"
        android:text="@string/jokes"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="@+id/jokesApp"
        app:layout_constraintStart_toStartOf="@+id/jokesApp" />

    <ImageButton
        android:id="@+id/positionApp"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_button"
        android:cropToPadding="true"
        android:fadingEdge="none"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:srcCompat="@drawable/position" />

    <TextView
        android:id="@+id/textPosition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:fontFamily="@font/noto_sans_bold"
        android:text="@string/positions"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/positionApp"
        app:layout_constraintStart_toStartOf="@+id/positionApp"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginTop="16dp"
        android:background="@color/weatherBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainToolBar" />

    <TextView
        android:id="@+id/widgetText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/noto_sans_bold"
        android:text="@string/widgetText"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainToolBar" />

    <ImageView
        android:id="@+id/weatherImage"
        android:layout_width="134dp"
        android:layout_height="151dp"
        android:layout_marginTop="6dp"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:srcCompat="@drawable/sunny"/>


    <ImageButton
        android:id="@+id/dangerApp"
        android:scaleType="fitCenter"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button"
        android:clickable="false"
        android:cropToPadding="true"
        android:fadingEdge="none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:srcCompat="@drawable/danger"
        android:visibility="gone"

        />


    <TextView
        android:id="@+id/textDanger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/noto_sans_bold"
        android:text="@string/danger"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dangerApp"
        android:visibility="gone"
        />

    <ImageButton
        android:id="@+id/listApp"
        android:scaleType="fitCenter"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_button"
        android:cropToPadding="true"
        android:fadingEdge="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:srcCompat="@drawable/list"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/textList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="45dp"
        android:fontFamily="@font/noto_sans_bold"
        android:text="@string/list"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listApp"
        android:visibility="gone"

        />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/weatherBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"


        />

    <ImageButton
        android:id="@+id/personImage1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@drawable/caller_background"
        android:padding="20dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/male" />

    <ImageButton
        android:id="@+id/personImage2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/caller_background"
        android:padding="20dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toStartOf="@+id/personImage3"
        app:layout_constraintStart_toEndOf="@+id/personImage1"
        app:layout_constraintTop_toTopOf="@+id/view2"
        app:srcCompat="@drawable/male" />

    <ImageButton
        android:id="@+id/personImage3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@drawable/caller_background"
        android:padding="20dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view2"
        app:srcCompat="@drawable/male" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/noto_sans_bold"
        android:text="Πάρε\nΜήτσο"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="@+id/personImage1"
        app:layout_constraintStart_toStartOf="@+id/personImage1"
        app:layout_constraintTop_toBottomOf="@+id/personImage1" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/noto_sans_bold"
        android:text="Πάρε\nΘοδωρή"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="@+id/personImage2"
        app:layout_constraintStart_toStartOf="@+id/personImage2"
        app:layout_constraintTop_toBottomOf="@+id/personImage2" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/noto_sans_bold"
        android:text="Πάρε\n Λία"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="@+id/personImage3"
        app:layout_constraintStart_toStartOf="@+id/personImage3"
        app:layout_constraintTop_toBottomOf="@+id/personImage3" />


</androidx.constraintlayout.widget.ConstraintLayout>